--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -88,6 +88,13 @@ input[type="reset"],
 nav h1 {
   margin: 0;
 }
+ul nav {
+  margin-left: var(--spacing);
+}
+nav ul nav li {
+  padding-left: calc(var(--nav-element-spacing-horizontal) * 0.8);
+  padding-right: calc(var(--nav-element-spacing-horizontal) * 0.8);
+}
 main main {
   margin: var(--block-spacing-vertical) 0;
 }
@@ -138,8 +145,14 @@ table.vertical tbody td {
   min-width: 25vw;
   max-width: 60vw;
 }
+tr.hoverable {
+  cursor: pointer;
+}
 tr.hoverable:hover td {
   background-color: var(--primary-focus);
+}
+tr.hoverable:hover .actions a {
+  filter: brightness(0.9);
 }
 td.right,
 th.right {
@@ -179,6 +192,10 @@ table a[data-turbo-method="delete"] {
 .logo {
   font-size: 2rem;
   color: var(--muted-color);
+}
+article {
+  padding-right: calc(var(--block-spacing-horizontal) * 2);
+  padding-bottom: calc(var(--block-spacing-vertical) * 2);
 }
 article.notice {
   box-shadow: none;
@@ -345,3 +362,7 @@ button.is-inverted:hover {
 /* 
   PAGINATION end
 */
+
+.mono {
+  font-family: monospace;
+}
