--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -193,7 +193,7 @@ table a[data-turbo-method="delete"] {
   font-size: 2rem;
   color: var(--muted-color);
 }
-article {
+article:not(.notice) {
   padding-right: calc(var(--block-spacing-horizontal) * 2);
   padding-bottom: calc(var(--block-spacing-vertical) * 2);
 }
