--- a/app/views/products/index.html.slim
+++ b/app/views/products/index.html.slim
@@ -4,15 +4,12 @@
 
 main
   = paginate @products  
-  table(role="grid")
+  table data-controller="table"
     thead
       tr
-        th
-          | Shop ID
-        th
-          | Full name
-        th
-          | Actions
+        th Woo ID
+        th Full name
+        th Actions
     tbody
       = render @products
   = paginate @products
