--- a/app/views/sales/show.html.slim
+++ b/app/views/sales/show.html.slim
@@ -4,69 +4,77 @@
   h1 = "Sale #{@sale.woo_id}"
 
 main
-  table.vertical(role="grid")
-    thead
-      th ID
-      th Woo ID
-      th Status
-      th Woo Created At
-      th Woo Updated At
-      th &nbsp;
-      th Total
-      th Discount
-      th Shipping
-      th &nbsp;
-      th Address 1
-      th Address 2
-      th City
-      th Company
-      th Country
-      th Phone
-      th Postcode
-      th State
-      th &nbsp;
-      th Customer
-      th Customer Woo ID
-      th Customer Email
-      th Note
-    tbody
-      td = @sale.id
-      td = safe_blank_render @sale.woo_id
-      td = @sale.status
-      td = safe_blank_render format_time(@sale.woo_created_at)
-      td = safe_blank_render format_time(@sale.woo_updated_at)
-      td &nbsp;
-      td = number_to_currency(@sale.total, locale: "de")
-      td = number_to_currency(@sale.discount_total, locale: "de")
-      td = number_to_currency(@sale.shipping_total, locale: "de")
-      td &nbsp;
-      td = safe_blank_render @sale.address_1
-      td = safe_blank_render @sale.address_2
-      td = safe_blank_render @sale.city
-      td = safe_blank_render @sale.company
-      td = safe_blank_render @sale.country
-      td = safe_blank_render @sale.customer.phone
-      td = safe_blank_render @sale.postcode
-      td = safe_blank_render @sale.state
-      td &nbsp;
-      td = "#{@sale.customer.first_name} #{@sale.customer.last_name}"
-      td = safe_blank_render @sale.customer.woo_id
-      td = safe_blank_render @sale.customer.email
-      td = safe_blank_render @sale.note
-
-- if @sale.product_sales.present?
-  br
-
-  article
-    h3 Order list
-    table
-      thead 
-        th Product
-        th Price
-        th Qty
+  .sale__show__container
+    table.vertical(role="grid")
+      thead
+        th Customer
+        th Woo ID
+        th Email
+        th Note
       tbody
-        - @sale.product_sales.each do |ps|
-          tr
-            td = ps.product.full_title 
-            td = number_to_currency(ps.price, locale: "de")
-            td = ps.qty
+        td = "#{@sale.customer.first_name} #{@sale.customer.last_name}"
+        td = safe_blank_render @sale.customer.woo_id
+        td = safe_blank_render @sale.customer.email
+        td = safe_blank_render @sale.note
+
+    table.vertical(role="grid")
+      thead
+        th Total
+        th Discount
+        th Shipping
+      tbody 
+        td = number_to_currency(@sale.total, locale: "de")
+        td = number_to_currency(@sale.discount_total, locale: "de")
+        td = number_to_currency(@sale.shipping_total, locale: "de")
+
+  - if @sale.product_sales.present?
+    .card
+      .card-head Products
+      .card-body
+        table
+          thead
+            th Full Title
+            th.right Price
+            th.right Quantity
+          tbody
+            - @sale.product_sales.each do |ps|
+              td = ps.product.full_title 
+              td.mono.right = number_to_currency(ps.price, unit: "")
+              td.right = ps.qty
+  
+  .sale__show__container
+    table.vertical(role="grid")
+      thead
+        th Address 1
+        th Address 2
+        th City
+        th Company
+        th Country
+        th Phone
+        th Postcode
+        th State
+
+      tbody
+        td = safe_blank_render @sale.address_1
+        td = safe_blank_render @sale.address_2
+        td = safe_blank_render @sale.city
+        td = safe_blank_render @sale.company
+        td = safe_blank_render @sale.country
+        td = safe_blank_render @sale.customer.phone
+        td = safe_blank_render @sale.postcode
+        td = safe_blank_render @sale.state
+
+    table.vertical(role="grid")
+      thead
+        th ID
+        th Woo ID
+        th Status
+        th Woo Created
+        th Woo Upd.
+
+      tbody
+        td = @sale.id
+        td = safe_blank_render @sale.woo_id
+        td = @sale.status
+        td = safe_blank_render format_time(@sale.woo_created_at)
+        td = safe_blank_render format_time(@sale.woo_updated_at)
