Feat 9. Add an ability to view debts in sales and purchases. Update design.

--- a/app/views/_shared/_nav-index.html.slim
+++ b/app/views/_shared/_nav-index.html.slim
@@ -1,7 +1,7 @@
 nav
   ul
     li 
-      h1 = model.model_name.plural.capitalize
+      h1.classic = model.model_name.plural.capitalize
   - if Rails.application.routes.url_helpers.respond_to?("new_#{model.name.downcase}_path")
     ul
       li
