--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,26 +11,31 @@ html
     = javascript_importmap_tags
   body
     header
-      nav
+      nav role="navigation" aria-label="main navigation"
         ul 
          li
           i.icn.logo 😸
         ul
-          li = link_to "Home", root_path
+          li = link_to "Debts", debts_path
           nav
             li = link_to "Sales", sales_path
             li = link_to "Customers", customers_path
           nav  
             li = link_to "Purchases", purchases_path
             li = link_to "Suppliers", suppliers_path
-          nav
+          nav  
             li = link_to "Products", products_path
-            li = link_to "Brands", brands_path
-            li = link_to "Franchises", franchises_path
-          nav
-            li = link_to "Colors", colors_path
-            li = link_to "Shapes", shapes_path
-            li = link_to "Sizes", sizes_path
-            li = link_to "Versions", versions_path
-    main
+
+          nav.dropdown role="navigation" aria-label="dropdown navigation"
+            .dropdown__btn
+              i.icn 🍔
+            ul.dropdown__content
+              li = link_to "Brands", brands_path
+              li = link_to "Franchises", franchises_path
+              li = link_to "Versions", versions_path
+              hr
+              li = link_to "Colors", colors_path
+              li = link_to "Shapes", shapes_path
+              li = link_to "Sizes", sizes_path
+    main.main
       = yield
