--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -5,35 +5,56 @@
     h1 = @product.title
     h2 = @product.full_title
 
-main
-  table.vertical(role="grid")
-    thead
-      tr
-        th ID
-        th Shop ID
-        th Supplier
-        th Franchise
-        th Title
-        th Size
-        th Shape
-        th Brand
-        th Version
-        th Color
-        th Created
-        th Updated
-    tbody
-      tr
-        td = @product.id
-        td = @product.woo_id
-        td = format_relation(@product.suppliers, "title")
-        td = @product.franchise.title
-        td = @product.title
-        td = format_relation(@product.sizes, "value")
-        td = @product.shape.title
-        td = format_relation(@product.brands, "title")
-        td = format_relation(@product.versions, "value")
-        td = format_relation(@product.colors, "value")
-        td = @product.created_at
-        td = @product.updated_at
+main.inner.v-flex.w-pd
+  .cards
+    .card.grow
+      .title Title
+      p = @product.title
+      .title Franchise
+      p = @product.franchise.title
+      .title Version
+      p = format_relation(@product.versions, "value")
+      .title Brand
+      p = format_relation(@product.brands, "title")
+      .title Size
+      p = format_relation(@product.sizes, "value")
+      .title Shape
+      p = @product.shape.title
+      .title Color
+      p = format_relation(@product.colors, "value")
+
+    .card
+      .title ID
+      p = @product.id
+      .title Woo ID
+      p = @product.woo_id
+      .title Supplier
+      p = format_relation(@product.suppliers, "title")
+      .title Created
+      p = @product.created_at
+      .title Updated
+      p = @product.updated_at
+
+  - if @active_sales.present?
+    .table-card
+      h3 Sales
+      table role="grid" data-controller="table"
+        thead
+          th.mute #
+          th Time ago
+          th Customer
+          th.right Price, $
+          th Qty
+        tbody
+          - @active_sales.each_with_index do |ps, idx|
+            tr.hoverable(
+              data-action="click->table#goTo"
+              data-table-url-param=sale_path(ps.sale)
+            )
+              td.mute = ps.sale.id
+              td = time_ago_in_words ps.sale.woo_created_at.presence || ps.created_at
+              td = ps.sale.customer.email 
+              td.right.mono = format_money ps.price
+              td = ps.qty
 
 = button_to "Destroy this product", product_path(@product), method: :delete, class: "btn-danger", data: { turbo_confirm: 'Are you sure?' }
