--- a/app/views/sales/_product.slim
+++ b/app/views/sales/_product.slim
@@ -4,4 +4,4 @@
   = f.label :qty
   = f.number_field :qty
   = f.label :price
-  = f.number_field :price, value: number_to_currency(f.object.price.to_f, delimiter: '', unit: ''), step: :any
+  = f.number_field :price, value: format_money(f.object.price), step: :any
