--- a/app/views/sales/_sale.html.slim
+++ b/app/views/sales/_sale.html.slim
@@ -2,7 +2,7 @@ tr.hoverable id="#{dom_id sale}" data-action="click->table#goTo" data-table-url-
   td = sale.woo_id
   td = sale.customer.email
   td = sale.status.titleize
-  td.right.mono = number_to_currency(sale.total, unit: "")
+  td.right.mono = format_money sale.total
   - if action_name != "show" 
     td.actions
       = link_to edit_sale_path(sale)
