--- a/app/views/sales/show.html.slim
+++ b/app/views/sales/show.html.slim
@@ -3,35 +3,42 @@
 = render "_shared/nav-show", model: @sale, custom_heading: true
   h1 = "Sale #{@sale.woo_id}"
 
-main
-  .sale__show__container
-    table.vertical(role="grid")
-      thead
-        th Customer
-        th Woo ID
-        th Email
-        th Note
-      tbody
-        td = "#{@sale.customer.first_name} #{@sale.customer.last_name}"
-        td = safe_blank_render @sale.customer.woo_id
-        td = safe_blank_render @sale.customer.email
-        td = safe_blank_render @sale.note
+main.inner.v-flex.w-pd
+  .cards
+    .card.grow
+      .title Status
+      p = @sale.status
+      .title Customer
+      p = "#{@sale.customer.first_name} #{@sale.customer.last_name}"
+      .title Woo ID
+      p = safe_blank_render @sale.customer.woo_id
+      .title Email
+      p = safe_blank_render @sale.customer.email
+      .title Note
+      p = safe_blank_render @sale.note
 
-    table.vertical(role="grid")
-      thead
-        th Total, $
-        th Discount
-        th Shipping
-      tbody 
-        td.right.fit = number_to_currency(@sale.total, locale: "de", unit: "")
-        td.right.fit = number_to_currency(@sale.discount_total, locale: "de", unit: "")
-        td.right.fit = number_to_currency(@sale.shipping_total, locale: "de", unit: "")
+    .card
+      .title Total, $
+      p.right.fit.mono = format_money @sale.total
+      .title Discount
+      p.right.fit.mono = format_money @sale.discount_total
+      .title Shipping
+      p.right.fit.mono = format_money @sale.shipping_total
+
+    .card
+      .title ID
+      p = @sale.id
+      .title Woo ID
+      p = safe_blank_render @sale.woo_id
+      .title Woo Created
+      p = safe_blank_render format_time(@sale.woo_created_at)
+      .title Woo Upd.
+      p = safe_blank_render format_time(@sale.woo_updated_at)  
 
   - if @sale.product_sales.present?
-    .card
-      .card-head Products
-      .card-body
-        table data-controller="table"
+    .table-card.full-width
+      h3 Products
+      table role="grid" data-controller="table"
           thead
             th.mute #
             th Full Title
@@ -45,42 +52,33 @@ main
               )
                 td.mute = idx + 1
                 td = ps.product.full_title 
-                td.right = number_to_currency(ps.price, unit: "")
+                td.right.mono = format_money ps.price
                 td.right = ps.qty
-  
-  .sale__show__container
-    table.vertical(role="grid")
+
+  .table-card.full-width
+    h3 Address
+    table role="grid"
       thead
         th Address 1
-        th Address 2
+        - if @sale.address_2.present?
+          th Address 2
         th City
-        th Company
+        - if @sale.company.present?
+          th Company
         th Country
         th Phone
         th Postcode
-        th State
-
+        - if @sale.state.present?
+          th State
       tbody
         td = safe_blank_render @sale.address_1
-        td = safe_blank_render @sale.address_2
+        - if @sale.address_2.present?
+          td = safe_blank_render @sale.address_2
         td = safe_blank_render @sale.city
-        td = safe_blank_render @sale.company
+        - if @sale.company.present?
+          td = safe_blank_render @sale.company
         td = safe_blank_render @sale.country
         td = safe_blank_render @sale.customer.phone
         td = safe_blank_render @sale.postcode
-        td = safe_blank_render @sale.state
-
-    table.vertical(role="grid")
-      thead
-        th ID
-        th Woo ID
-        th Status
-        th Woo Created
-        th Woo Upd.
-
-      tbody
-        td = @sale.id
-        td = safe_blank_render @sale.woo_id
-        td = @sale.status
-        td = safe_blank_render format_time(@sale.woo_created_at)
-        td = safe_blank_render format_time(@sale.woo_updated_at)
+        - if @sale.state.present?
+          td = safe_blank_render @sale.state
