--- a/app/views/shapes/show.html.slim
+++ b/app/views/shapes/show.html.slim
@@ -17,4 +17,20 @@ main
     tbody
       = render @shape
 
+  - if @shape.products.present?
+  .table-card.full-width.mg-t
+    h3 Products
+    table role="grid" data-controller="table"
+        thead
+          th.mute ID
+          th Full Title
+        tbody
+          - @shape.products.each do |product|
+            tr.hoverable(
+              data-action="click->table#goTo"
+              data-table-url-param=product_path(product)
+            )
+              td.mute = product.id
+              td = product.full_title 
+
 = button_to "Destroy this shape", shape_path(@shape), method: :delete, class: "btn-danger"  
