--- a/app/views/versions/_version.html.slim
+++ b/app/views/versions/_version.html.slim
@@ -1,12 +1,8 @@
 tr id="#{dom_id version}"
-  td
-    = version.id
-  td
-    = version.value
-  td
-    = version.created_at
-  td
-    = version.updated_at
+  td = version.id
+  td = version.value
+  td = format_time version.created_at
+  td = format_time version.updated_at
   - if action_name != "show" 
     td.actions
       = link_to version
