--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,7 @@
  *= require_self
  */
 :root {
-  xl: calc(var(--spacing) * 1.5);
+  --spacing-m: calc(var(--spacing) * 1.5);
   --spacing-l: calc(var(--spacing) * 2);
   --spacing-xl: calc(var(--spacing) * 3);
   --ss-primary-color: var(--primary-hover);
