--- a/app/views/dashboard/debts.slim
+++ b/app/views/dashboard/debts.slim
@@ -45,4 +45,4 @@ main.inner.no-bd.v-flex
               .sign
                 |  :: 
               = sales.first.full_title
-            td = sales.size
+            td = sales.size - sales.first.purchases.size
