--- a/app/views/products/_product.html.slim
+++ b/app/views/products/_product.html.slim
@@ -1,6 +1,11 @@
 tr.hoverable id="#{dom_id product}" data-action="click->table#goTo" data-table-url-param=product_path(product)
   td = product.woo_id
-  td = product.full_title
+  td
+    = product.full_title
+    - if product.variations.present?
+      ul.product-variations
+        - product.variations.each do |variation|
+          li = variation.title
   - if action_name != "show" 
     td.actions
       = link_to edit_product_path(product)
