--- a/app/views/purchases/show.html.slim
+++ b/app/views/purchases/show.html.slim
@@ -1,10 +1,14 @@
 = render "_shared/notice"
 
 = render "_shared/nav-show", model: @purchase, custom_heading: true
-  h1 = @purchase.product.full_title
+  h1
+    = @purchase.product.full_title
+    i.icn.is-link = link_to "🔗", @purchase.product
 
 main.inner.v-flex.w-pd
   .cards
+    - if @purchase.product.image.present?
+      img.product src="#{@purchase.product.image}"
     .card.grow
       .title Qty
       p = @purchase.amount
@@ -22,10 +26,10 @@ main.inner.v-flex.w-pd
     .card
       .title Supplier
       p = @purchase.supplier.title
-      .title Date
-      p = format_time @purchase.created_at
       .title Order reference
       p = @purchase.order_reference
+      .title Date
+      p = format_time @purchase.created_at
       .title Progress
       p
         progress.no-mg value=@purchase.progress max=100
